Solved bug in DANS bag conversion